import dsl.core.view.RootFusionView

class Molecule(val name: String, val view: RootFusionView)